--- a/Potencial/Makefile
+++ b/Potencial/Makefile
@@ -1,14 +1,15 @@
 all:anim.gif
 OBJ= main.o
 %.o:%.cpp constantes.h
-	g++ -c -O2 $< -n
+	g++ -c -O3 -fopenmp $< -n
 
 main.x:$(OBJ)
 
-	g++ -O3 -g -Wall  $^  -o $@
+	g++ -O3 -g -pg -Wall -fopenmp $^  -o $@
 
 anim.gif: main.x
 	time ./main.x save movie | gnuplot
+	python3 grafica.py
 .PHONY:clean
 clean:
 	rm -f *.x *.o 
